--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "clean-webpack-plugin": "^0.1.18",
-    "css-loader": "^0.28.10",
+    "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.9",
+    "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.1.0",
@@ -35,9 +35,16 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.20.2",
-    "uglifyjs-webpack-plugin": "^1.2.2",
+    "style-loader": "^0.20.1",
+    "uglifyjs-webpack-plugin": "^1.2.0",
     "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack-dev-server": "^2.11.1",
+    "copy-webpack-plugin": "^4.4.2",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.2"
   }
 }
